--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		Container Content
 	</script>
 	<script id="row-template" type="text/template">
-		Row Content
+		Row Content <a href="#" onclick="PageController.removeRow({containerUUID:'<%= containerUUID %>', uuid:'<%= uuid %>'})">x</a>
 	</script>
 	<script id="column-template" type="text/template">
 		Column Content
