--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Canvas</title>
+<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
 <style>
-.container {border: 1px solid #000; padding: 5px;}
+/*.container {border: 1px solid #000; padding: 5px;}
 .row {border: 1px solid #000;; padding: 5px;}
+.column {border: 1px solid #000;; padding: 5px;}*/
 </style>
 </head>
 
 <body>
 	<script id="container-template" type="text/template">
-		Container Content
+	Container
 	</script>
 	<script id="row-template" type="text/template">
-		Row Content <a href="#" onclick="PageController.removeRow({containerUUID:'<%= containerUUID %>', uuid:'<%= uuid %>'})">x</a>
+	Row
+		<a class="pull-right" href="#" onclick="PageController.removeRow({containerUUID:'<%= containerUUID %>', uuid:'<%= uuid %>'})">x</a>
 	</script>
 	<script id="column-template" type="text/template">
 		Column Content
@@ -29,5 +32,6 @@
 	<script src="backbone.marionette/backbone.js"></script>
 	<script src="backbone.marionette/backbone.marionette.js"></script>
 	<script src="app.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
 </body>
 </html>
