--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Canvas</title>
 <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
 <style>
-/*.container {border: 1px solid #000; padding: 5px;}
+.container {border: 1px solid #000; padding: 5px;}
 .row {border: 1px solid #000;; padding: 5px;}
-.column {border: 1px solid #000;; padding: 5px;}*/
+.column {border: 1px solid #000;; padding: 5px;}
 </style>
 </head>
 
