--- a/index.html
+++ b/index.html
@@ -5,29 +5,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Canvas</title>
+<link href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" rel="stylesheet">
 <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
 <style>
-.container {border: 1px solid #000; padding: 5px;}
-.row {border: 1px solid #000;; padding: 5px;}
-.column {border: 1px solid #000;; padding: 5px;}
+.page {margin-top:10px;}
+.container_outline {border: 1px dotted #666; min-height: 50px;}
+.row_outline {margin-top: 10px; margin-bottom: 10px; background: #fff; border-top: 2px solid #666; border: 1px dotted #666;}
+.row_outline:hover {border: 1px dotted #4a9bff;}
+.column_outline {background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAKElEQVQIW2NkQANpaWn/GZHFQAKzZs1ihAvCBECKwILIAmBBdAGQIABhihI3cAJZSwAAAABJRU5ErkJggg==) repeat; }
+.column_outline:hover {background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAALElEQVQIW2NkwAK8Zv//z4guDhLclsrIiCIBEwQphksgC8Il0AXBEtgEQRIAZYYW6jbeKcYAAAAASUVORK5CYII=) repeat; }
 </style>
 </head>
 
 <body>
 	<script id="container-template" type="text/template">
-	Container
+	
 	</script>
 	<script id="row-template" type="text/template">
-	Row
-		<a class="pull-right" href="#" onclick="PageController.removeRow({containerUUID:'<%= containerUUID %>', uuid:'<%= uuid %>'})">x</a>
+	
+<!--		<a class="pull-right" href="#" onclick="PageController.removeRow({containerUUID:'<%= containerUUID %>', uuid:'<%= uuid %>'})">x</a> -->
 	</script>
 	<script id="column-template" type="text/template">
-		Column Content
+	Content
 	</script>
 	<div id="page">
 	</div>	
 	<script src="uuid.core.js"></script>
 	<script src="backbone.marionette/jquery.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 	<script src="backbone.marionette/underscore.js"></script>
 	<script src="backbone.marionette/backbone.js"></script>
 	<script src="backbone.marionette/backbone.marionette.js"></script>
