--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	<script id="row-template" type="text/template">
 	Row <%= content %>
 	<a href="#" onclick="PageController.removeRow({containerUUID: '<%= options.containerUUID %>',uuid:'<%= uuid %>'})">x</a>
+	<div class="columns">
+	</div>
 	</script>
 	<script id="column-template" type="text/template">
 	Content
