--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Canvas</title>
-<link href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" rel="stylesheet">
-<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
-<style>
-.page {margin-top:10px;}
-.container_outline {border: 1px dotted #666; min-height: 50px;}
-.row_outline {margin-top: 10px; margin-bottom: 10px; background: #fff; border-top: 2px solid #666; border: 1px dotted #666; border-top: 4px solid #666;}
-.row_outline:hover {border: 1px dotted #4a9bff;  border-top: 4px solid #4a9bff;}
-.column_outline {background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAKElEQVQIW2NkQANpaWn/GZHFQAKzZs1ihAvCBECKwILIAmBBdAGQIABhihI3cAJZSwAAAABJRU5ErkJggg==) repeat; }
-.column_outline:hover {background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAALElEQVQIW2NkwAK8Zv//z4guDhLclsrIiCIBEwQphksgC8Il0AXBEtgEQRIAZYYW6jbeKcYAAAAASUVORK5CYII=) repeat; }
-</style>
+<link href="vendor/smoothness/jquery-ui-1.10.0.custom.min.css" rel="stylesheet">
+<link href="css/canvas.css" rel="stylesheet">
+<link href="vendor/bootstrap.css" rel="stylesheet">
+<link href="vendor/bootstrap-responsive.css" rel="stylesheet">
+	
+<!-- Site CSS -->
+<link href="css/site/theme.css" rel="stylesheet">
+<link href="css/site/flexslider.css" rel="stylesheet">
 </head>
 
 <body>
@@ -22,22 +20,27 @@
 	<!-- Start scaffolding Templates -->
 	
 	<script id="container-template" type="text/template">
-	<a href="#" onclick="PageController.removeContainer({uuid: '<%= uuid %>'})">x</a>
+	<div class="row">
+		<div class="span12 handle "><a href="#" class="ib-control pull-right" onclick="PageController.removeContainer({uuid: '<%= uuid %>'})"><span class="label label-inverse">container</span> <i class="icon-remove"></i></a></div>
+	</div>
 	<div class="rows">
 	</div>
 	</script>
 	
 	<script id="row-template" type="text/template">
-	Row <%= content %>
-	<a href="#" onclick="PageController.removeRow({uuid:'<%= uuid %>', containerUUID: '<%= options.containerUUID %>'})">x</a>
+	<div class="span12 handle">
+		<a href="#" class="ib-control pull-right" onclick="PageController.removeRow({uuid:'<%= uuid %>', containerUUID: '<%= options.containerUUID %>'})"><span class="label label-inverse">row</span> <i class="icon-remove"></i></a>
+	</div>
 	<div class="columns">
 	</div>
 	</script>
 	
 	<script id="column-template" type="text/template">
+	<div class="handle"></div>
 	Column <%= content %>
 	<div class="blocks">
 	</div>
+
 	</script>
 	
 	<!-- End scaffolding Templates -->
@@ -45,32 +48,61 @@
 	<!-- Start block Templates -->
 	
 	<script id="text-block-template" type="text/template">
-	Rich Text <%= content %> <a href="#" onclick="PageController.removeBlock({uuid:'<%= uuid %>', columnUUID:'<%= columnUUID %>', rowUUID:'<%= rowUUID %>', containerUUID: '<%= containerUUID %>'})">x</a>
+	<a href="#"  class="ib-control pull-right" onclick="PageController.removeBlock({uuid:'<%= uuid %>', columnUUID:'<%= columnUUID %>', rowUUID:'<%= rowUUID %>', containerUUID: '<%= containerUUID %>'})"><i class="icon-remove"></i></a>
+	Rich Text <%= content %> 
 
 	</script>
 	
 	<script id="table-block-template" type="text/template">
-	Table <%= content %> <a href="#" onclick="PageController.removeBlock({uuid:'<%= uuid %>', columnUUID:'<%= columnUUID %>', rowUUID:'<%= rowUUID %>', containerUUID: '<%= containerUUID %>'})">x</a>
+	<a href="#"  class="ib-control pull-right" onclick="PageController.removeBlock({uuid:'<%= uuid %>', columnUUID:'<%= columnUUID %>', rowUUID:'<%= rowUUID %>', containerUUID: '<%= containerUUID %>'})"><i class="icon-remove"></i></a>
+	Table <%= content %>
 	</script>
 	
 	<script id="video-block-template" type="text/template">
-	Video <%= content %> <a href="#" onclick="PageController.removeBlock({uuid:'<%= uuid %>', columnUUID:'<%= columnUUID %>', rowUUID:'<%= rowUUID %>', containerUUID: '<%= containerUUID %>'})">x</a>
+	<a href="#"  class="ib-control pull-right" onclick="PageController.removeBlock({uuid:'<%= uuid %>', columnUUID:'<%= columnUUID %>', rowUUID:'<%= rowUUID %>', containerUUID: '<%= containerUUID %>'})"><i class="icon-remove"></i></a>
+	Video <%= content %> 
 	</script>
 	
 	<!-- End block Templates -->
 	
+	<!-- Begin Sidebar -->
+	<div id="sidebarbtn">
+		<i class="icon-th-list icon-white"></i>
+	</div>
+	
+	<div id="sidebar">
+		<div class="pull-right">
+		<a class="btn btn-mini btn-inverse" onclick="toggleSidebar()"><i class="icon-remove icon-white"></i></a>
+		</div>
+		<br/>
+		
+		<ul class="nav nav-list">
+			<li class="nav-header">Templates</li>
+			<li><a href="/#/page/1"><div class="draggable_scaffold" data-template="scaffold_col1row">Home Template</div></a></li>
+			<li><a href="#"><div class="draggable_scaffold" data-template="scaffold_col1row">About Template</div></a></li>
+			
+			<li class="nav-header">Scaffolding</li>
+			<li><a href="#"><div class="sidebar_container" data-template="container-template">Container</div></a></li>
+			<li><a href="#"><div class="sidebar_row" data-template="row-template">Row</div></a>
+
+		  <li class="nav-header">Blocks</li>
+		  <li><a href="#"><div class="sidebar_blocks" data-template="video-block-template">Video</div></a></li>			
+		</ul>
+	</div>
+	<!-- End Sidebar -->
+	
 	<div id="page">
 	</div>	
-	<script src="uuid.core.js"></script>
-	<script src="backbone.marionette/jquery.js"></script>
-	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
-	<script src="backbone.marionette/underscore.js"></script>
-	<script src="backbone.marionette/backbone.js"></script>
-	<script src="backbone.marionette/backbone.marionette.js"></script>	
-	<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
-	<script src="models.js"></script>
-	<script src="views.js"></script>
-	<script src="controllers.js"></script>
+	<script src="vendor/uuid.core.js"></script>
+	<script src="vendor/jquery-1.9.0.js"></script>
+	<script src="vendor/jquery-ui-1.10.0.custom.min.js"></script>
+	<script src="vendor/underscore-min.js"></script>
+	<script src="vendor/backbone-min.js"></script>
+	<script src="vendor/bootstrap.min.js"></script>
+	<script src="js/app/models.js"></script>
+	<script src="js/app/views.js"></script>
+	<script src="js/app/controllers.js"></script>
+	<script src="js/app/ui.js"></script>
 	<script>
 	$(document).ready(function(){
 	currentPage = new Page({id:1});
@@ -82,6 +114,34 @@
 					PageController = new IB.PageController(new Page());
 				}
 		});
+		
+		$( ".sidebar_container" ).draggable({
+			scope: "containers",
+		    connectToSortable: ".page",
+		    helper: "clone",
+		    revert: "invalid"
+		});
+
+	
+		$( ".sidebar_rows" ).draggable({
+			scope: "rows",
+		    connectToSortable: ".container",
+		    helper: "clone",
+		    revert: "invalid"
+		});
+		
+		$( ".sidebar_blocks" ).draggable({
+			scope: "columns",
+		    connectToSortable: ".column",
+		    helper: "clone",
+		    revert: "invalid"
+		});
+	
+		$("#sidebarbtn").click(function(){
+			toggleSidebar();
+		});
+		
+		$('.handle').hide();
 	});
 	</script>
 </body>
