--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 	<!-- End block Templates -->
 	
 	<!-- Begin Sidebar -->
-	<div id="sidebarbtn">
-		<a href="#" onclick="IB.toggleSidebar()"><i class="icon-th-list icon-white"></i></a>
+	<div id="sidebarbtn" onclick="IB.toggleSidebar()">
+		<a href="#"><i class="icon-th-list icon-white"></i></a>
 	</div>
 	
 	<div id="sidebar">
