--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	
 	<script id="column-template" type="text/template">
 	<div class="handle column-handle"></div>
-	<div class="blocks" data-uuid="<%= uuid %>" data-row="<%= options.rowUUID %>" data-container="<%= options.containerUUID %>">
+	<div class="blocks blocks-outline" data-uuid="<%= uuid %>" data-row="<%= options.rowUUID %>" data-container="<%= options.containerUUID %>">
 	</div>
 
 	</script>
@@ -97,7 +97,34 @@
 				</div>				
 			</div>
 		</div>
-		
+		<div id="css-sandbox-container-fluid" class="container-fluid">
+			<div id="css-sandbox-row-fluid" class="row-fluid">
+				<div id="css-sandbox-span1" class="span1">
+				</div>
+				<div id="css-sandbox-span2" class="span2">
+				</div>
+				<div id="css-sandbox-span3" class="span3">
+				</div>
+				<div id="css-sandbox-span4" class="span4">
+				</div>
+				<div id="css-sandbox-span5" class="span5">
+				</div>
+				<div id="css-sandbox-span6" class="span6">
+				</div>
+				<div id="css-sandbox-span7" class="span7">
+				</div>
+				<div id="css-sandbox-span8" class="span8">
+				</div>
+				<div id="css-sandbox-span9" class="span9">
+				</div>
+				<div id="css-sandbox-span10" class="span10">
+				</div>
+				<div id="css-sandbox-span11" class="span11">
+				</div>
+				<div id="css-sandbox-span12" class="span12">
+				</div>				
+			</div>
+		</div>		
 	</div>
 	<!-- End CSS Sandbox -->
 	
