--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
 	
 	<div id="sidebar">
 		<div class="pull-right">
-		<a class="btn btn-mini btn-inverse" onclick="IB.toggleSidebar()"><i class="icon-remove icon-white"></i></a>
+		<a id="savebtn" class="btn btn-inverse">Save</i></a>
+		<a class="btn btn-inverse" onclick="IB.toggleSidebar()"><i class="icon-remove icon-white"></i></a>
 		</div>
 		<br/>
-		
+		<br/>
 		<ul class="nav nav-list">
 			<li class="nav-header">Templates</li>
 			<li><a href="/#/page/1"><div class="draggable_scaffold" data-template="scaffold_col1row">Home Template</div></a></li>
